Shape predict function

--- a/Investigate data.ipynb
+++ b/Investigate data.ipynb
@@ -275,14 +275,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(model, test_df):\n",
-    "    test_df_reduced = test_df.drop(columns=['Date', 'Country_Region', 'Province_State', \n",
-    "                                            'ConfirmedCases', 'Fatalities', 'ForecastId'])\n",
-    "    res = []\n",
-    "    for i, df_row in test_df_reduced.iterrows():\n",
-    "        X_test = df_row.to_numpy()\n",
-    "        y_pred = model.predict([X_test])\n",
-    "        test_df.loc[i, 'ConfirmedCases'] = y_pred"
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.columns"
    ]
   },
   {
@@ -291,7 +300,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_to_drop = ['Date', 'Country_Region', 'Province_State', 'ConfirmedCases', 'Fatalities']\n",
+    "def predict(model, test_df):\n",
+    "    confirmed_queue = deque(test_df_reduced.loc[:10, 'ConfirmedCases'], maxlen=10)\n",
+    "    fatalities_queue = deque(test_df_reduced.loc[:10, 'Fatalities'], maxlen=10)\n",
+    "\n",
+    "    res = []\n",
+    "    for i, df_row in test_df.iterrows():\n",
+    "        X_test = df_row['Day_num', 'Day', 'Month'].to_numpy().tolist()\n",
+    "        confirmed_pred = model.predict([X_test + list(confirmed_queue)])\n",
+    "        fatalities_pred = model.predict([X_test + list(fatalities_queue)])\n",
+    "        confirmed_queue.append(confirmed_pred)\n",
+    "        fatalities_queue.append(fatalities_pred)\n",
+    "\n",
+    "        test_df.loc[i, 'ConfirmedCases'] = confirmed_pred\n",
+    "        test_df.loc[i, 'Fatalities'] = fatalities_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xcolumns_to_drop = ['Date', 'Country_Region', 'Province_State', 'ConfirmedCases', 'Fatalities']\n",
     "\n",
     "country_dfs = []\n",
     "for country in tqdm(data['Country_Region'].unique()):\n",
@@ -510,9 +541,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6 cutin env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cutin"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -524,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
