Fix lagging. Fix typos

--- a/Investigate data.ipynb
+++ b/Investigate data.ipynb
@@ -95,8 +95,8 @@
    "source": [
     "def lagging(df, lags=10):\n",
     "    dfs = []\n",
-    "    for i in range(1, lags):\n",
-    "        lag_df = df.shift(i, fill_value=0)\n",
+    "    for i in range(lags):\n",
+    "        lag_df = df.shift(i + 1, fill_value=0)\n",
     "        lag_df = lag_df.rename(lambda x: x + f'_{i}', axis=1)\n",
     "        dfs.append(lag_df)\n",
     "    \n",
@@ -280,35 +280,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict(model, test_df):\n",
-    "    confirmed_queue = deque(test_df_reduced.loc[:10, 'ConfirmedCases'], maxlen=10)\n",
-    "    fatalities_queue = deque(test_df_reduced.loc[:10, 'Fatalities'], maxlen=10)\n",
+    "    confirmed_queue = deque(test_df.loc[:10, 'ConfirmedCases'], maxlen=10)\n",
+    "    fatalities_queue = deque(test_df.loc[:10, 'Fatalities'], maxlen=10)\n",
     "\n",
     "    res = []\n",
     "    for i, df_row in test_df.iterrows():\n",
-    "        X_test = df_row['Day_num', 'Day', 'Month'].to_numpy().tolist()\n",
-    "        confirmed_pred = model.predict([X_test + list(confirmed_queue)])\n",
-    "        fatalities_pred = model.predict([X_test + list(fatalities_queue)])\n",
+    "        X_test = df_row[['Day_num', 'Day', 'Month']].to_numpy().tolist()\n",
+    "        confirmed_pred = 1 # model.predict([X_test + list(confirmed_queue)]).flatten()\n",
+    "        fatalities_pred = 1 # model.predict([X_test + list(fatalities_queue)]).flatten()\n",
     "        confirmed_queue.append(confirmed_pred)\n",
     "        fatalities_queue.append(fatalities_pred)\n",
     "\n",
@@ -318,11 +302,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7b26dbcc50a24ee7a4945e9ce49f0c65",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=173), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Day_num', 'Day', 'Month', 'ConfirmedCases_1', 'Fatalities_1',\n",
+      "       'ConfirmedCases_2', 'Fatalities_2', 'ConfirmedCases_3', 'Fatalities_3',\n",
+      "       'ConfirmedCases_4', 'Fatalities_4', 'ConfirmedCases_5', 'Fatalities_5',\n",
+      "       'ConfirmedCases_6', 'Fatalities_6', 'ConfirmedCases_7', 'Fatalities_7',\n",
+      "       'ConfirmedCases_8', 'Fatalities_8', 'ConfirmedCases_9', 'Fatalities_9'],\n",
+      "      dtype='object')\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "Xcolumns_to_drop = ['Date', 'Country_Region', 'Province_State', 'ConfirmedCases', 'Fatalities']\n",
+    "columns_to_drop = ['Date', 'Country_Region', 'Province_State', 'ConfirmedCases', 'Fatalities']\n",
     "\n",
     "country_dfs = []\n",
     "for country in tqdm(data['Country_Region'].unique()):\n",
@@ -346,7 +358,8 @@
     "        models_df, models_res = train_models(X_train, y_confirmed)\n",
     "        models_df['country'] = country\n",
     "        models_df['state'] = state\n",
-    "        country_dfs.append(models_df)"
+    "        country_dfs.append(models_df)\n",
+    "    break"
    ]
   },
   {
