Finish notebook. Has bugs

--- a/Investigate data.ipynb
+++ b/Investigate data.ipynb
@@ -69,9 +69,9 @@
     "\n",
     "public_mask = np.logical_and(start_training < train_data['Date'], train_data['Date'] <= train_up_to)\n",
     "\n",
-    "train_data = train_data[public_mask].copy()\n",
+    "train_data = train_data[public_mask]\n",
     "train_data.loc[:, ('ConfirmedCases', 'Fatalities')] = train_data.loc[:, ['ConfirmedCases', 'Fatalities']] \\\n",
-    "                                                      .apply(lambda x: np.log1p(x), )\n",
+    "                                                      .apply(lambda x: np.log1p(x))\n",
     "train_data.replace([np.inf, -np.inf], 0, inplace=True)"
    ]
   },
@@ -181,6 +181,7 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
+    "from xgboost import XGBRegressor\n",
     "from sklearn.metrics import accuracy_score, log_loss, hinge_loss, f1_score, precision_score\n",
     "from sklearn import svm, tree, linear_model, neighbors, naive_bayes, ensemble, discriminant_analysis, gaussian_process\n",
     "from sklearn import model_selection\n",
@@ -220,8 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_pred[['Predicted_ConfirmedCases', 'Predicted_Fatalities']] = data_pred[['Predicted_ConfirmedCases', 'Predicted_Fatalities']].apply(lambda x: np.expm1(x))\n",
-    "# data_pred.replace([np.inf, -np.inf], 0, inplace=True) "
+    "from copy import deepcopy"
    ]
   },
   {
@@ -232,7 +232,7 @@
    },
    "outputs": [],
    "source": [
-    "def train_models(X_train, y_confirmed):\n",
+    "def train_models(X_train, y_confirmed, y_fatalities):\n",
     "    ML_methods = [\n",
     "        ensemble.AdaBoostRegressor(),\n",
     "        ensemble.BaggingRegressor(),\n",
@@ -246,26 +246,46 @@
     "        svm.SVR(),\n",
     "        svm.NuSVR(),\n",
     "        svm.LinearSVR(),\n",
+    "#         XGBRegressor(objective='reg:squarederror'),\n",
     "    ]\n",
     "\n",
-    "    ML_columns = ['ML Name', 'ML Parameters', 'ML Test Error Mean', 'ML Test Error 3*STD' ,'ML Time']\n",
-    "    ML_compare = pd.DataFrame(columns = ML_columns)\n",
+    "    ML_compare = pd.DataFrame()\n",
     "    ML_predict = {}\n",
     "\n",
     "    tscv = TimeSeriesSplit(n_splits=3) \n",
     "    for row_index, clf in enumerate(ML_methods):\n",
-    "\n",
-    "        cv_results = model_selection.cross_validate(clf, X_train, y_confirmed, cv=tscv, scoring='neg_mean_squared_error')\n",
+    "        clf_confirmed = clf\n",
+    "        clf_fatalities = deepcopy(clf)\n",
+    "        \n",
+    "        confirmed_cv_results = model_selection.cross_validate(\n",
+    "            clf_confirmed, X_train, y_confirmed, cv=tscv, scoring='neg_mean_squared_error')\n",
+    "        fatalities_cv_results = model_selection.cross_validate(\n",
+    "            clf_fatalities, X_train, y_fatalities, cv=tscv, scoring='neg_mean_squared_error')\n",
     "\n",
     "        ML_name = clf.__class__.__name__\n",
-    "        ML_compare.loc[row_index, 'ML Name'] = ML_name\n",
-    "        ML_compare.loc[row_index, 'ML Parameters'] = str(clf.get_params())\n",
-    "        ML_compare.loc[row_index, 'ML Time'] = cv_results['fit_time'].mean()\n",
-    "        ML_compare.loc[row_index, 'ML Test Error Mean'] = -1 * cv_results['test_score'].mean()   \n",
-    "        ML_compare.loc[row_index, 'ML Test Error 3*STD'] = 3 * cv_results['test_score'].std()\n",
+    "        \n",
+    "        ML_compare.loc[row_index, 'Name'] = ML_name\n",
+    "        ML_compare.loc[row_index, 'Parameters'] = str(clf.get_params())\n",
+    "        \n",
+    "        ML_compare.loc[row_index, 'Confirmed Time'] = confirmed_cv_results['fit_time'].mean()\n",
+    "        ML_compare.loc[row_index, 'Fatalities Time'] = fatalities_cv_results['fit_time'].mean()\n",
+    "        \n",
+    "        ML_compare.loc[row_index, 'Confirmed Test Error Mean'] = -1 * \\\n",
+    "                                    confirmed_cv_results['test_score'].mean()   \n",
+    "        ML_compare.loc[row_index, 'Fatalities Test Error Mean'] = -1 * \\\n",
+    "                                    fatalities_cv_results['test_score'].mean()   \n",
+    "        ML_compare.loc[row_index, 'Confirmed Test Error 3*STD'] = 3 * \\\n",
+    "                                    confirmed_cv_results['test_score'].std()\n",
+    "        ML_compare.loc[row_index, 'Fatalities Test Error 3*STD'] = 3 * \\\n",
+    "                                    fatalities_cv_results['test_score'].std()\n",
     "\n",
-    "        clf = clf.fit(X_train, y_confirmed)\n",
-    "        ML_predict[ML_name] = np.expm1(clf.predict(X_train))\n",
+    "\n",
+    "        clf_confirmed = clf_confirmed.fit(X_train, y_confirmed)\n",
+    "        clf_fatalities = clf_fatalities.fit(X_train, y_fatalities)\n",
+    "        \n",
+    "#         ML_predict[ML_name] = (np.expm1(clf_confirmed.predict(X_train)), \n",
+    "#                                np.expm1(clf_fatalities.predict(X_train)))\n",
+    "        \n",
     "    return ML_compare, ML_predict"
    ]
   },
@@ -274,65 +294,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from collections import deque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict(model, test_df):\n",
-    "    confirmed_queue = deque(test_df.loc[:10, 'ConfirmedCases'], maxlen=10)\n",
-    "    fatalities_queue = deque(test_df.loc[:10, 'Fatalities'], maxlen=10)\n",
-    "\n",
-    "    res = []\n",
-    "    for i, df_row in test_df.iterrows():\n",
-    "        X_test = df_row[['Day_num', 'Day', 'Month']].to_numpy().tolist()\n",
-    "        confirmed_pred = 1 # model.predict([X_test + list(confirmed_queue)]).flatten()\n",
-    "        fatalities_pred = 1 # model.predict([X_test + list(fatalities_queue)]).flatten()\n",
-    "        confirmed_queue.append(confirmed_pred)\n",
-    "        fatalities_queue.append(fatalities_pred)\n",
-    "\n",
-    "        test_df.loc[i, 'ConfirmedCases'] = confirmed_pred\n",
-    "        test_df.loc[i, 'Fatalities'] = fatalities_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b26dbcc50a24ee7a4945e9ce49f0c65",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=173), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Day_num', 'Day', 'Month', 'ConfirmedCases_1', 'Fatalities_1',\n",
-      "       'ConfirmedCases_2', 'Fatalities_2', 'ConfirmedCases_3', 'Fatalities_3',\n",
-      "       'ConfirmedCases_4', 'Fatalities_4', 'ConfirmedCases_5', 'Fatalities_5',\n",
-      "       'ConfirmedCases_6', 'Fatalities_6', 'ConfirmedCases_7', 'Fatalities_7',\n",
-      "       'ConfirmedCases_8', 'Fatalities_8', 'ConfirmedCases_9', 'Fatalities_9'],\n",
-      "      dtype='object')\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
     "columns_to_drop = ['Date', 'Country_Region', 'Province_State', 'ConfirmedCases', 'Fatalities']\n",
     "\n",
@@ -352,14 +313,24 @@
     "        \n",
     "        y_confirmed = state_train_data['ConfirmedCases'].to_numpy()\n",
     "        y_fatalities = state_train_data['Fatalities'].to_numpy()\n",
-    "        X_train = state_train_data.drop(columns=columns_to_drop + ['ForecastId'])\n",
-    "        print(X_train.columns)\n",
-    "        predict(None, state_test_data)\n",
-    "        models_df, models_res = train_models(X_train, y_confirmed)\n",
+    "        X_train = state_train_data.drop(columns=columns_to_drop + ['ForecastId']).to_numpy()\n",
+    "        \n",
+    "#         predict(None, state_test_data)\n",
+    "        models_df, models_res = train_models(X_train, y_confirmed, y_fatalities)\n",
     "        models_df['country'] = country\n",
     "        models_df['state'] = state\n",
     "        country_dfs.append(models_df)\n",
-    "    break"
+    "\n",
+    "models_df = pd.concat(country_dfs, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ML_compare"
    ]
   },
   {
@@ -382,18 +353,147 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ML_methods = [\n",
+    "    ensemble.AdaBoostRegressor(),\n",
+    "    ensemble.BaggingRegressor(),\n",
+    "    ensemble.ExtraTreesRegressor(),\n",
+    "    ensemble.RandomForestRegressor(),\n",
+    "    ensemble.GradientBoostingRegressor(),\n",
+    "    ensemble.RandomForestRegressor(),\n",
+    "    linear_model.PassiveAggressiveRegressor(),\n",
+    "    linear_model.Ridge(),\n",
+    "    neighbors.KNeighborsRegressor(),\n",
+    "    svm.SVR(),\n",
+    "    svm.NuSVR(),\n",
+    "    svm.LinearSVR(),\n",
+    "    XGBRegressor(objective='reg:squarederror'),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(test_df, confirmed_model, fatalities_model):\n",
+    "    lags_queue = deque(test_df.iloc[0, -20:], maxlen=20)\n",
+    "    \n",
+    "    res = []\n",
+    "    for i, df_row in test_df.iterrows():\n",
+    "        X_test = df_row[['Day_num', 'Day', 'Month']].to_numpy().tolist()\n",
+    "        X_test = np.array([X_test + list(lags_queue)])\n",
+    "        confirmed_pred = confirmed_model.predict(X_test).flatten()\n",
+    "        fatalities_pred = fatalities_model.predict(X_test).flatten()\n",
+    "        \n",
+    "        lags_queue.appendleft(fatalities_pred)\n",
+    "        lags_queue.appendleft(confirmed_pred)\n",
+    "\n",
+    "        test_df.loc[i, 'ConfirmedCases'] = confirmed_pred\n",
+    "        test_df.loc[i, 'Fatalities'] = fatalities_pred\n",
+    "    \n",
+    "    test_df.loc[:, 'ConfirmedCases'] = np.expm1(test_df['ConfirmedCases'])\n",
+    "    test_df.loc[:, 'Fatalities'] = np.expm1(test_df['ConfirmedCases'])\n",
+    "    \n",
+    "    return test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "i = 0\n",
-    "for country in tqdm(train_data['Country_Region'].unique()):\n",
-    "    country_df = train_data.loc[train_data['Country_Region'] == country]\n",
+    "for country in tqdm(data['Country_Region'].unique()):\n",
+    "    country_df = data.loc[data['Country_Region'] == country]\n",
     "    for state in country_df['Province_State'].unique():\n",
+    "        models_state_mask = np.logical_and(models_df['country'] == country, models_df['state'] == state)\n",
+    "        models_state_df = models_df[models_state_mask]\n",
+    "        \n",
+    "        model_confirmed_idx = models_state_df['Confirmed Test Error Mean'].argmin()\n",
+    "        model_fatalities_idx = models_state_df['Fatalities Test Error Mean'].argmin()\n",
+    "        \n",
+    "        confirmed_model = deepcopy(ML_methods[model_confirmed_idx])\n",
+    "        fatalities_model =  deepcopy(ML_methods[model_fatalities_idx])\n",
+    "        \n",
+    "        curr_state_mask = np.logical_and(data['Country_Region'] == country, data['Province_State'] == state)\n",
+    "        curr_state_data = data.loc[curr_state_mask]\n",
+    "        \n",
+    "        lags_data = lagging(curr_state_data[['ConfirmedCases', 'Fatalities']])\n",
+    "        data_with_lags = pd.concat([curr_state_data, lags_data], axis=1).dropna()\n",
+    "        state_train_mask = data_with_lags['ForecastId'] == -1\n",
+    "        \n",
+    "        state_train_data = data_with_lags[state_train_mask]\n",
+    "        state_test_data = data_with_lags[~state_train_mask]\n",
+    "        \n",
+    "        y_confirmed = state_train_data['ConfirmedCases'].to_numpy()\n",
+    "        y_fatalities = state_train_data['Fatalities'].to_numpy()\n",
+    "        X_train = state_train_data.drop(columns=columns_to_drop + ['ForecastId']).to_numpy()\n",
+    "        \n",
+    "        confirmed_model = confirmed_model.fit(X_train, y_confirmed)\n",
+    "        fatalities_model = fatalities_model.fit(X_train, y_fatalities)\n",
+    "    \n",
+    "        state_test_data = predict(state_test_data, confirmed_model, fatalities_model)\n",
+    "        curr_state_data.loc[~state_train_mask, ['ConfirmedCases', 'Fatalities']] = \\\n",
+    "                            state_test_data.loc[:, ['ConfirmedCases', 'Fatalities']]\n",
+    "        data.loc[curr_state_mask, ['ConfirmedCases', 'Fatalities']] = \\\n",
+    "                            curr_state_data.loc[:, ['ConfirmedCases', 'Fatalities']]\n",
+    "        \n",
+    "        \n",
     "        plt.figure(figsize=(15, 7))\n",
-    "        sns.barplot(x='ML Test Error Mean', y = 'ML Name', data = country_dfs[i], color = 'm')\n",
-    "        plt.title(country + ':' + state + ' ' + str(i))\n",
-    "        plt.xlabel('RMSLE Score')\n",
-    "        plt.ylabel('Algorithm')\n",
+    "        plt.plot(state_test_data['ConfirmedCases'], label='Confirmed')\n",
+    "        plt.plot(state_test_data['Fatalities'], label='Fatalities')\n",
+    "        plt.title(f'{country}:{state}')\n",
+    "        plt.legend()\n",
     "        plt.show()\n",
     "        i += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data[data['Country_Region'] == 'Afghanistan']['ConfirmedCases'].plot()\n",
+    "data[data['Country_Region'] == 'Afghanistan']['ConfirmedCases'].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data[data['Country_Region'] == 'Italy']['ConfirmedCases'].plot()\n",
+    "data[data['Country_Region'] == 'Italy']['ConfirmedCases'].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
