Complete Keras LSTM model code

--- a/Keras LSTM.ipynb
+++ b/Keras LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm_notebook as tqdm\n",
+    "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline"
@@ -18,11 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_masks(df): \n",
+    "import os\n",
+    "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_masks(data): \n",
     "    train_mask = data['ForecastId'] == -1\n",
     "    validation_mask = data['ForecastId'] == 0\n",
     "    test_mask = data['ForecastId'] > 0\n",
@@ -31,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,16 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.preprocessing import sequence\n",
     "\n",
-    "def extract_data(data, mask, features, targets):\n",
-    "    df = data.loc[mask, features]\n",
-    "    X = df.shift(1).iloc[1:]\n",
-    "    y = df[targets].iloc[1:]\n",
+    "def extract_data(data, mask, features, targets, shift=1):\n",
+    "    df = data.loc[mask]\n",
+    "    X, y = df[features], df[targets]\n",
+    "    \n",
+    "    X = X.shift(shift).iloc[shift:]\n",
+    "    y = y.iloc[shift:]\n",
+    "    \n",
     "    return X.to_numpy(), y.to_numpy()\n",
     "\n",
     "\n",
@@ -77,11 +90,11 @@
     "        for x, y in data_gen:\n",
     "            x_res.append(x[0])\n",
     "            y_res.append(y[0])\n",
-    "\n",
+    "            \n",
     "    return np.array(x_res), np.array(y_res)\n",
     "\n",
     "\n",
-    "def generate_dataset(data, features, targets, window_size, train_mask, val_mask=None):\n",
+    "def generate_dataset(data, states, features, targets, window_size, train_mask, val_mask=None):\n",
     "    X_train = []\n",
     "    X_val = []\n",
     "    y_train = []\n",
@@ -98,7 +111,6 @@
     "                X, y = extract_data(data, val_mask & state_mask, lstm_features, targets)\n",
     "                X_val.append(X)\n",
     "                y_val.append(y)\n",
-    "    \n",
     "    \n",
     "    X_train, y_train = get_timeframes_dataset(X_train, y_train, window_size)\n",
     "    if val_mask is not None:\n",
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,19 +205,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, model_title, loss, metrics):\n",
+    "def train_model(model, model_name, loss, metrics):\n",
+    "    model_name = model_name.replace(' ', '_')\n",
     "    model.compile('adam', loss, metrics=metrics)\n",
     "    reduce_lr = ReduceLROnPlateau(monitor='loss', factor=0.2, patience=10, min_lr=0.0001, verbose=1)\n",
-    "    tnsboard = TensorBoard(log_dir=f'logs\\\\{model_title}')\n",
+    "    tnsboard = TensorBoard(log_dir=f'logs\\\\{model_name}')\n",
     "    name_template = 'rmsle_{val_rmsle:.3f}_epoch_{epoch:02d}'\n",
-    "    checkout = ModelCheckpoint(f'models\\\\{model_title}_{name_template}.hdf5', monitor=f'val_rmsle', save_best_only=True)\n",
+    "    checkout = ModelCheckpoint(f'weights\\\\{model_name}_{name_template}.hdf5', monitor=f'val_rmsle', save_best_only=True)\n",
     "    callbacks = [tnsboard, reduce_lr, checkout]\n",
     "    model.fit(X_train, y_train, validation_data=(X_val, y_val), batch_size=128, epochs=400, callbacks=callbacks)\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_test(model, data, states, features, targets, window_size, train_mask, test_mask):\n",
+    "    submission_df = pd.DataFrame(data=data, columns=['ForecastId'] + targets, dtype=int)\n",
+    "    for country in tqdm(states.keys()):\n",
+    "        for state in states[country]:\n",
+    "            state_mask = (data.Country_Region == country) & (data.Province_State == state)\n",
+    "\n",
+    "            pre_test_days = data.loc[train_mask & state_mask, features]\n",
+    "            X_test, _ = extract_data(data, test_mask & state_mask, features, targets, 0)\n",
+    "\n",
+    "            X_test = np.concatenate([pre_test_days[-window_size:], X_test], axis=0)\n",
+    "\n",
+    "            y_pred = np.zeros((len(X_test), len(targets)))\n",
+    "            for i in range(window_size, len(X_test)):\n",
+    "                test_window = np.expand_dims(X_test[i-window_size:i], axis=0)\n",
+    "                X_test[i, -2:] = model.predict(test_window)\n",
+    "\n",
+    "            y_pred = X_test[window_size:, -2:]\n",
+    "            submission_df.loc[test_mask & state_mask, targets] = np.round(y_pred).astype(int)\n",
+    "    return submission_df[test_mask]"
    ]
   },
   {
@@ -217,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,25 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data.tail(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,16 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,12 +350,13 @@
     "window_size = 4\n",
     "\n",
     "train_mask, val_mask, test_mask = get_masks(data)\n",
-    "X_train, y_train, X_val, y_val = generate_dataset(data, lstm_features, lstm_targets, window_size, train_mask, val_mask)"
+    "X_train, y_train, X_val, y_val = generate_dataset(data, states, lstm_features, lstm_targets, \n",
+    "                                                  window_size, train_mask, val_mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,32 +368,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_model(model, 'lstm_3xlstm_batchnorm_dropout_3xdense', 'msle', [rmsle])"
+    "def load_best_model(model_name, verbose=0):\n",
+    "    fname_template = os.path.join('weights', model_name + '*.hdf5')\n",
+    "    files = glob(fname_template)\n",
+    "    weights_fname = sorted(files)[0]\n",
+    "    model = tf.keras.models.load_model(weights_fname, custom_objects={'rmsle': rmsle})\n",
+    "    if verbose > 0:\n",
+    "        print(weights_fname)\n",
+    "        model.summary()\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights\\lstm_3xlstm_batchnorm_dropout_3xdense_rmsle_0.337_epoch_397.hdf5\n",
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lstm (LSTM)                  (None, 4, 50)             11200     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization (BatchNo (None, 4, 50)             200       \n",
+      "_________________________________________________________________\n",
+      "lstm_1 (LSTM)                (None, 4, 50)             20200     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 4, 50)             200       \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 4, 50)             0         \n",
+      "_________________________________________________________________\n",
+      "lstm_2 (LSTM)                (None, 4, 50)             20200     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 4, 50)             200       \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 4, 50)             0         \n",
+      "_________________________________________________________________\n",
+      "lstm_3 (LSTM)                (None, 50)                20200     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_3 (Batch (None, 50)                200       \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 50)                0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 50)                2550      \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 10)                510       \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 2)                 22        \n",
+      "=================================================================\n",
+      "Total params: 75,682\n",
+      "Trainable params: 75,282\n",
+      "Non-trainable params: 400\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = 'lstm_3xlstm_batchnorm_dropout_3xdense'\n",
+    "# train_model(model, model_name, 'msle', [rmsle])\n",
+    "model = load_best_model(model_name, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = predict_test(model, data, states, lstm_features, lstm_targets, window_size, train_mask, test_mask)"
    ]
   },
   {
@@ -387,10 +452,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = np.log1p(1.37)\n",
-    "x"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -412,21 +509,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(test_df, model):\n",
-    "    lags_queue = deque(test_df.iloc[0, -20:], maxlen=20)\n",
-    "    res = []\n",
-    "    for i, df_row in test_df.iterrows():\n",
-    "        X_test = df_row[['Day_num', 'Day', 'Month']].to_numpy().tolist()\n",
-    "        X_test = np.array([X_test + list(lags_queue)])\n",
-    "        \n",
-    "        y_pred =  model.predict(X_test).flatten()\n",
-    "        \n",
-    "        lags_queue.appendleft(y_pred[1])\n",
-    "        lags_queue.appendleft(y_pred[0])\n",
+    "#Plotting\n",
+    "# plt.figure(figsize=(14, 7))\n",
+    "# plt.plot(country_train_data['Date'], \n",
+    "#          country_train_data['ConfirmedCases'].values, c='b', label='')\n",
     "\n",
-    "        res.append(y_pred)\n",
-    "    \n",
-    "    return res"
+    "# plt.plot(country_val_data['Date'], \n",
+    "#          country_val_data['ConfirmedCases'], c='b', label='Confirmed GT',)\n",
+    "\n",
+    "# plt.scatter(country_train_data['Date'], y_pred_train['ConfirmedCases'], c='r', label='')\n",
+    "# plt.scatter(country_val_data['Date'], y_pred_val['ConfirmedCases'], c='r', label='Pred')\n",
+    "\n",
+    "# plt.axvline(train_up_to, linestyle='--', label='Training Validation split')\n",
+    "# plt.legend()\n",
+    "# plt.title(country +' (Log Scale)')\n",
+    "# plt.ylabel('Log cases')\n",
+    "# plt.xlabel('Date')\n",
+    "# plt.show()"
    ]
   }
  ],
